--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -36,3 +36,9 @@ jobs:
                   pattern: "\\.json$"
               env:
                   BASE: "domains/"
+            # NOTE: wait for wildcard support
+            # - name: Validate JSON Schema
+            #   uses: docker://orrosenblatt/validate-json-action:latest
+            #   env:
+            #     INPUT_SCHEMA: "schema.json"
+            #     INPUT_JSONS: "domains/*" 
