--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -36,9 +36,8 @@ jobs:
                   pattern: "\\.json$"
               env:
                   BASE: "domains/"
-            # NOTE: wait for wildcard support
-            # - name: Validate JSON Schema
-            #   uses: docker://orrosenblatt/validate-json-action:latest
-            #   env:
-            #     INPUT_SCHEMA: "schema.json"
-            #     INPUT_JSONS: "domains/*" 
+            - name: Validate action.yml against a remote schema
+              uses: cardinalby/schema-validator-action@v3
+              with:
+                file: 'domains/*.json'
+                schema: 'schema.json'
