--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -6,6 +6,8 @@ on:
         branches: [main]
         paths:
             - "domains/**"
+            - "dbgen.js"
+            - ".github/workflows/db.yml"
 
 jobs:
     generate:
