--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -42,13 +42,12 @@ jobs:
                   name: database
                   path: database.json
 
-            - name: Commit and push database.json to another repository
+            - name: Commit and push database.json to database repository
               run: |
                   git clone https://github.com/partofmyid/database.git db
                   cd db
                   git config --global user.name 'github-actions'
                   git config --global user.email 'github-actions@github.com'
-                  git config --unset-all http.https://github.com/.extraheader
                   mv ../database.json .
                   git add database.json
                   git commit -m 'Update database.json'
