--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -48,12 +48,11 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                   name: database
-                  path: ./database.json
+                  path: ./artifact
 
             - name: Commit and push database.json to database repository
               run: |
-                  ls -la database.json
-                  cp database.json db/database.json -f
+                  mv artifact/database.json db/database.json -f
                   cd db
                   git add database.json
                   git commit -m 'Update database.json'
