--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -40,9 +40,10 @@ jobs:
             - name: Clone database repository
               run: |
                 git clone https://github.com/partofmyid/database.git db
-                cd db
-                git config --global user.name 'github-actions'
-                git config --global user.email 'github-actions@github.com'
+                git config --global user.name ${{ secrets.GH_COMMIT_USER }}
+                git config --global user.email ${{ secrets.GH_COMMIT_EMAIL }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
             - name: Download database artifact
               uses: actions/download-artifact@v4
@@ -55,7 +56,7 @@ jobs:
                   mv artifact/database.json db/database.json -f
                   cd db
                   git add database.json
-                  git commit -m 'Update database.json'
+                  git commit -m '[automated] update database.json'
                   git push
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
