--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -34,6 +34,6 @@ jobs:
               run: |
                   git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
                   git config --global user.name "github-actions[bot]"
-                  git add database.json
-                  git commit -m "Update database.json"
+                  git add stats
+                  git commit -m "[automated] update stats"
                   git push
