--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
         paths:
             - "domains/**"
             - ".github/workflows/publish.yml"
-            - "dnsconfig.js"
+            - "scripts/dnsconfig.js"
 
 concurrency:
     group: ${{ github.ref }}-publish
@@ -26,4 +26,4 @@ jobs:
                   CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
               with:
                   args: push
-                  config_file: "dnsconfig.js"
+                  config_file: "scripts/dnsconfig.js"
