--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -6,7 +6,7 @@ on:
         branches: [main]
         paths:
             - "domains/**"
-            - "dbgen.js"
+            - "scripts/dict.js"
             - ".github/workflows/db.yml"
 
 permissions:
