--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -3,6 +3,7 @@ name: Validation
 on:
     workflow_dispatch:
     pull_request:
+    merge_group:
     push:
         branches: [main]
         paths:
