--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -7,10 +7,9 @@ on:
     push:
         branches: [main]
         paths:
-            - "domains/**"
+            - "domains/*"
             - ".github/workflows/validation.yml"
-            - "scripts/dnsconfig.js"
-            - "scripts/schema.json"
+            - "scripts/*"
 
 concurrency:
     group: ${{ github.ref }}-validation
