--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -18,6 +18,9 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.PR_BYPASS_TOKEN }}
+                  fetch-depth: 0
 
             - name: Set up Node.js
               uses: actions/setup-node@v4
